# rust-template

./: .gitignore  Cargo.toml  LICENSE  cargo-generate.toml  pre.rhai
src/: config.rs  error.rs  main.rs
