[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = ""
license = "MIT"

[package.metadata.deb]
maintainer = "{{authors}}"
copyright = "2023, {{username}}"
assets = [
    ["target/release/{{project-name}}", "usr/bin/", "755"],
]

[dependencies]
anyhow = "1.0.71"
{%- if cli_enable %}
clap = { version = "4.3.9", features = ["derive"] }
{%- endif %}
{%- if config_enable %}
serde = { version = "1.0.164", features = ["derive"] }
{%- endif %}
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
{%- if config_enable %}
toml = "0.7.4"
{%- endif %}
{%- if logging_enable %}
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
{%- endif %}