[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = ""
license = "MIT"

[package.metadata.deb]
maintainer = "{{authors}}"
copyright = "2023, {{username}}"
assets = [
    ["target/release/{{project-name}}", "usr/bin/", "755"],
]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
