[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = ""
license = "MIT"

[package.metadata.deb]
maintainer = "{{authors}}"
copyright = "2024, {{username}}"
assets = [
    ["target/release/{{project-name}}", "usr/bin/", "755"],
]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.22", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
